--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#000000" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,12 +20,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -35,28 +37,23 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyAHu_UyUq-II44r9FkECOL5-G5frmYrWP0",
+      authDomain: "react-sn-f6e7a.firebaseapp.com",
+      databaseURL: "https://react-sn-f6e7a.firebaseio.com",
+      projectId: "react-sn-f6e7a",
+      storageBucket: "react-sn-f6e7a.appspot.com",
+      messagingSenderId: "285858875149",
+      appId: "1:285858875149:web:19f5fdf1f56906be1c5244",
+      measurementId: "G-W2K93VEF8C"
+    };
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script> -->
+</body>
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAHu_UyUq-II44r9FkECOL5-G5frmYrWP0",
-    authDomain: "react-sn-f6e7a.firebaseapp.com",
-    databaseURL: "https://react-sn-f6e7a.firebaseio.com",
-    projectId: "react-sn-f6e7a",
-    storageBucket: "react-sn-f6e7a.appspot.com",
-    messagingSenderId: "285858875149",
-    appId: "1:285858875149:web:19f5fdf1f56906be1c5244",
-    measurementId: "G-W2K93VEF8C"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
-  </body>
 </html>
